feat: adicionando configuração para conexão com banco de dados

--- a/user-crud/appsettings.json
+++ b/user-crud/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DataBase": "Server=./;Database=dotnet_user_crud;User Id=mateus;Password="
+  },
   "AllowedHosts": "*"
 }
