feat: rotas de listagem e criação de usuário finalizadas

--- a/user-crud/appsettings.json
+++ b/user-crud/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DataBase": "Server=./;Database=dotnet_user_crud;User Id=mateus;Password="
+    "DataBase": "User ID=mateus ;Password=2684;Host=localhost;Port=5432;Database=dotnet_user_crud;Pooling=true;"
   },
   "AllowedHosts": "*"
 }
